plugins {
    id 'java'
    id "org.sonarqube" version "4.0.0.2929"
    id 'jacoco'
}

group = 'com.thiago.order-processor-service'
version = '1.0.0-SNAPSHOT'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

allprojects {
    repositories {
        mavenCentral()
    }

    tasks.withType(JavaCompile) {
        options.compilerArgs += "--enable-preview"
    }

    tasks.withType(Test) {
        jvmArgs += "--enable-preview"
    }
}

subprojects {

    tasks.register("jacocoTestReport", JacocoReport) {
        dependsOn "test"
        reports {
            xml.required = true
            html.required = true
        }

        classDirectories.setFrom(
                files(classDirectories.files.collect {
                    fileTree(it) {
                        exclude '**/exception/**', '**/dto/**', '**/config/**', '**/record/**'
                    }
                })
        )
    }

    sonarqube {
        properties {
            property "sonar.projectKey", "order-processor-service"
            property "sonar.organization", "thiago-organization"
            property "sonar.host.url", "http://ec2-3-16-67-144.us-east-2.compute.amazonaws.com:9000/"
            property "sonar.login", "sqa_026c8aa16e033fd82b25252be25c69f4c3bb042a"
            property "sonar.sourceEncoding", "UTF-8"
            property "sonar.language", "java"
            property "sonar.java.binaries", "${projectDir}/build/classes/java/main"
            property "sonar.coverage.jacoco.xmlReportPaths", "${buildDir}/reports/jacoco/test/jacocoTestReport.xml"
        }
    }
}

